new mrthod get-by-userId
