# storage/api-docs/api-docs.json
@@ -189,6 +189,37 @@
                 }
             }
         },
+        "/api/interview-worksheets/get-by-userId/{user_id}": {
+            "get": {
+                "tags": [
+                    "Interview worksheets"
+                ],
+                "operationId": "024bb340b2543a7eadc82fdb00b9c74b",
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "path",
+                        "description": "1",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/interview-worksheets/{id}": {
             "delete": {
                 "tags": [
